Fix spacing on features

--- a/css/outer/home/features.less
+++ b/css/outer/home/features.less
@@ -25,7 +25,7 @@
 
   & > section {
     .container;
-    padding-bottom: 35px;
+    padding-bottom: 55px;
   }
 }
 
@@ -33,11 +33,11 @@
 .tour {
   @ib-height: 160px;
 
-  width: 300px;
+  width: 280px;
   min-height: @ib-height;
   display: inline-block;
   vertical-align: top;
-  margin: 5px;
+  margin: 25px 0 0 35px;
   position: relative;
   zoom: 1;
   *display: inline;
